--- a/JeffSite/Views/Loja/Edit.cshtml
+++ b/JeffSite/Views/Loja/Edit.cshtml
@@ -6,7 +6,11 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Create" enctype="multipart/form-data" method="POST">
+<form asp-action="Edit" enctype="multipart/form-data" method="POST">
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.Title)</label>
+        <input type="text" class="form-control" asp-for="Id" readonly>
+    </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
         <input type="text" class="form-control" asp-for="Title">
@@ -25,7 +29,7 @@
     </div>
     
     <a asp-controller="Loja" asp-action="ListLivro">Voltar</a>
-    <button class="btn btn-primary">Proximo</button>
+    <button class="btn btn-primary">Editar</button>
 </form>
 
 @section Scripts {
