Edicao do livro

--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -28,6 +28,7 @@
         width: 100%;
         text-align: justify;
         padding-left: 30px;
+        padding-right: 20px;
     }
     .descricao-corpo p{
         font-style: italic;
