add link compra autografada

--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -84,7 +84,7 @@
                                 {
                                     <li><a href="@wtb.UrlEndereco" target="_blank"><i class="@wtb.IconFA"></i> @wtb.Name</a></li>
                                 }
-                                
+                                    <li><a href=""><i class="fas fa-book-open"></i> Compra Autografada</a></li>
                             </ul>
                         </div>
                     </div>
