--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     string linkMercadoLivre = ViewBag.LinkMercadoLivre;
 }
+<script src="lib/jquery/dist/jquery.min.js"></script>
 <style>
     .livro{
         background-color: #EEEEEE;
@@ -84,7 +85,7 @@
                                 {
                                     <li><a href="@wtb.UrlEndereco" target="_blank"><i class="@wtb.IconFA"></i> @wtb.Name</a></li>
                                 }
-                                    <li><a href=""><i class="fas fa-book-open"></i> Compra Autografada</a></li>
+                                    <li><a href="" id="linkAutografado" data-toggle="modal" data-target="#myModal" data-id="@item.Id" data-title="@item.Title"><i class="fas fa-book-open"></i> Compra Autografada</a></li>
                             </ul>
                         </div>
                     </div>
@@ -95,5 +96,51 @@
 
     </div>
 
+    <!-- modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="myModalLabel">Compra Autografada</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <input type="hidden" id="idLivro">
+                <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">Recipient:</label>
+                    <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="form-group">
+                    <label for="message-text" class="col-form-label">Message:</label>
+                    <textarea class="form-control" id="message-text"></textarea>
+                </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Send message</button>
+            </div>
+            </div>
+        </div>
+    </div>
+
     
 </div>
+
+<script>
+    $('a#linkAutografado').click(function (event){
+        var id = $(event.target).attr("data-id")
+        var title = $(event.target).attr("data-title")
+        //console.log($(event.target).attr("data-id"))
+        //console.log($(event.target).attr("data-title"))
+
+        $("h5#myModalLabel").text(title)
+        $("input#idLivro").val(id)
+        
+    })
+
+    
+</script>
