enviando dados para modal

--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -110,18 +110,18 @@
                 <form>
                     <input type="hidden" id="idLivro">
                 <div class="form-group">
-                    <label for="recipient-name" class="col-form-label">Recipient:</label>
-                    <input type="text" class="form-control" id="recipient-name">
+                    <label for="nome" class="col-form-label">Nome:</label>
+                    <input type="text" class="form-control" id="Nome">
                 </div>
                 <div class="form-group">
-                    <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
+                    <label for="email" class="col-form-label">Email:</label>
+                    <input class="form-control" type="email" id="email">
                 </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send message</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                <button type="button" class="btn btn-primary">Enviar</button>
             </div>
             </div>
         </div>
