--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -117,6 +117,26 @@
                     <label for="email" class="col-form-label">Email:</label>
                     <input class="form-control" type="email" id="email">
                 </div>
+                <div class="form-group">
+                    <label for="dedicado" class="col-form-label">Nome do dedicado</label>
+                    <input class="form-control" type="text" id="dedicado">
+                </div>
+                <div class="form-group">
+                    <label for="cep" class="col-form-label">CEP</label>
+                    <input class="form-control" type="text" id="CEP">
+                </div>
+                <div class="form-group">
+                    <label for="endereco" class="col-form-label">Endereço</label>
+                    <input class="form-control" type="text" id="CEP">
+                </div>
+                <div class="form-group">
+                    <label for="numero" class="col-form-label">Numero</label>
+                    <input class="form-control" type="number" id="numero">
+                </div>
+                <div class="form-group">
+                    <label for="complemento" class="col-form-label">Complemento</label>
+                    <input class="form-control" type="text" id="complemento">
+                </div>
                 </form>
             </div>
             <div class="modal-footer">
