--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -206,7 +206,7 @@
             Cidade: $("#cidade").val(),
             Numero: parseInt($("#numero").val()),
             Complemento: $("#complemento").val(),
-            IdLivro: parseInt($("#idLivro").val())
+            LivroId: parseInt($("#idLivro").val())
         }
 
         //console.log(JSON.stringify(pedido))
