--- a/JeffSite/Views/Loja/Delete.cshtml
+++ b/JeffSite/Views/Loja/Delete.cshtml
@@ -33,6 +33,9 @@
             <button type="button" class="btn btn-danger" >
                 URLs <span class="badge badge-light">@ViewBag.qtdWTB</span>
             </button>
+            <button type="button" class="btn btn-danger" >
+                Pedidos <span class="badge badge-light">@ViewBag.qtdPedido</span>
+            </button>
         </div>
     }else{
         <button class="btn btn-danger">Excluir</button>
