--- a/JeffSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite/Views/Shared/_LayoutAdmin.cshtml
@@ -40,7 +40,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-controller="Loja" asp-action="ListLivros">Livros</a>
-                                <a class="dropdown-item" href="#">Pedidos</a>
+                                <a class="dropdown-item" asp-controller="Loja" asp-action="Pedido">Pedidos</a>
                             </div>
                         </li>
                     </ul>
