--- a/JeffSite/Views/Loja/Pedido.cshtml
+++ b/JeffSite/Views/Loja/Pedido.cshtml
@@ -6,3 +6,33 @@
 <br>
 <h1>@ViewData["Title"]</h1>
 <br>
+
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">@Html.DisplayNameFor(Model => Model.Id)</th>
+      <th scope="col">@Html.DisplayNameFor(Model => Model.Email)</th>
+      <th scope="col">@Html.DisplayNameFor(Model => Model.Status)</th>
+    </tr>
+  </thead>
+  <tbody>
+      @foreach (var item in Model)
+      {
+          <tr>
+            <th scope="row">
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id })
+                    @Html.Label(" | ")
+                    @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
+                    @Html.Label(" | ")
+                    @Html.ActionLink("Links", "CreateWhereToBuy", new { id = item.Id })
+            </th>
+            <td>@Html.DisplayFor(modelItem => item.Id)</td>
+            <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            <td>@Html.DisplayFor(modelItem => item.Status)</td>
+            
+        </tr>
+      }
+  </tbody>
+</table>
