--- a/JeffSite/Views/Loja/PedidoAddInfo.cshtml
+++ b/JeffSite/Views/Loja/PedidoAddInfo.cshtml
@@ -41,7 +41,7 @@
                 </select>
                 break;
             case 3:
-                <label>Foi dedicado</label>
+                <label>Foi dedicado para: <b><i>@Model.NomeDedicado</i></b></label>
                 <select class="form-control" id="outrosStatus" name="outrosStatus" >
                     <option value="DedicadoSim">Sim</option>
                     <option value="DedicadoNao">Não</option>
