--- a/JeffSite/Views/Loja/Pedido.cshtml
+++ b/JeffSite/Views/Loja/Pedido.cshtml
@@ -11,8 +11,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th scope="col">#</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Id)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Nome)</th>
+      <th scope="col">@Html.DisplayNameFor(Model => Model.NomeDedicado)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Email)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Status)</th>
     </tr>
@@ -21,8 +23,14 @@
       @foreach (var item in Model)
       {
           <tr>
+            <td>
+              @Html.ActionLink("Editar", "EditPedido", new { id = item.Id })
+              @Html.Label(" | ")
+              @Html.ActionLink("Deletar", "DeletePedido", new { id = item.Id })
+            </td>
             <td>@Html.DisplayFor(modelItem => item.Id)</td>
             <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+            <td>@Html.DisplayFor(modelItem => item.NomeDedicado)</td>
             <td>@Html.DisplayFor(modelItem => item.Email)</td>
             <td>
               @if(@JeffSite.Utils.Util.GetDescription(item.Status) == "Enviado"){
