--- a/JeffSite/Views/Loja/EditPedido.cshtml
+++ b/JeffSite/Views/Loja/EditPedido.cshtml
@@ -9,7 +9,6 @@
 <br>
 
 <form asp-action="PedidoAddInfo" method="POST">
-    <input type="hidden" class="form-control" asp-for="Status" >
     <input type="hidden" class="form-control" asp-for="LivroId" >
     <input type="hidden" class="form-control" asp-for="Nome" >
     <input type="hidden" class="form-control" asp-for="NomeDedicado" >
@@ -31,7 +30,7 @@
     <div class="input-group mb-3">
         <input type="text" class="form-control" asp-for="LinkPagamento">
         <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button">Reenviar Email</button>
+            <button class="btn btn-outline-secondary" type="submit" asp-action="PedidoAddInfo" asp-route-Status="1">Reenviar Email</button>
         </div>
     </div>
 
@@ -39,7 +38,7 @@
     <div class="input-group mb-3">
         <input type="text" class="form-control" asp-for="LinkRastreio">
         <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button">Reenviar Email</button>
+            <button class="btn btn-outline-secondary" type="submit" asp-action="PedidoAddInfo" asp-route-Status="4" >Reenviar Email</button>
         </div>
     </div>
 
